# fastneo

./: pyproject.toml
.github/workflows/: ci.yml
fastneo/exceptions/: exceptions.py
fastneo/models/: node.py
fastneo/rest/: __init__.py  methods.py
src/fastneo/models/: __init__.py
tests/: conftest.py  test_placeholder.py
tests/rest/: conftest.py
tests/rest/create/: test_rest_create.py
tests/rest/delete/: test_rest_delete.py
tests/rest/get/: test_rest_get.py
tests/rest/update/: test_rest_update.py
tests/utils/: __init__.py  simple_node_classes.py
