[project]
name = "fastneo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "neomodel>=6.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "testcontainers>=4.14.2",
    "ty>=0.0.28",
]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning:testcontainers.*"
]
pythonpath = ["."]
